<resources>
    <string name="app_name">Fast App</string>
    <string name="click_string">Click</string>
    <string name="agetextview">TextView</string>
    <string name="textview">TextView</string>
    <string name="Fast_Name">et_fast_name</string>
    <string name="Father_Name">et_father_name</string>
    <string name="Last_Name">et_last_name</string>
    <string name="Mather_Name">et_mather_name</string>
    <string name="Barth_Of_Date">et_barth_of_date</string>
    <string name="Age">et_age</string>
    <string name="Gender">et_gender</string>
    <string name="Bank_Account">et_bank_account</string>
    <string name="Mobile_Number">et_mobile_number</string>
    <string name="Email">et_email</string>
    <string name="Address">et_address</string>
    <string name="Permanent_Address">et_permanent_address</string>
    <string name="Save">bt_save</string>
    <string name="fast_name">Fast Name</string>
    <string name="last_name">Last Name</string>
    <string name="father_name">Father Name</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="bank_account">Bank Account</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="barth_of_date">Barth Of Date</string>
    <string name="mather_name">Mather Name</string>
    <string name="todo">TODO</string>
    <string name="save_text">Save</string>
    <string name="photo">Photo</string>
</resources>
