<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.entern.testapp.MainActivity">

    <EditText
        android:id="@+id/et_fast_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/fast_name"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_fast_name"
        android:layout_alignStart="@+id/et_fast_name"
        android:layout_below="@+id/et_fast_name"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/et_father_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_last_name"
        android:layout_alignStart="@+id/et_last_name"
        android:layout_below="@+id/et_last_name"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/father_name"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/et_mather_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_father_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/mather_name"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/et_barth_of_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_mather_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/barth_of_date"
        android:inputType="none|textPersonName|date"
        android:text="" />

    <EditText
        android:id="@+id/et_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_barth_of_date"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        android:text="" />

    <EditText
        android:id="@+id/et_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_age"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/gender"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/et_bank_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_gender"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/bank_account"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/et_mobile_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_bank_account"
        android:layout_alignStart="@+id/et_bank_account"
        android:layout_below="@+id/et_bank_account"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:text="" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_mobile_number"
        android:layout_alignStart="@+id/et_mobile_number"
        android:layout_below="@+id/et_mobile_number"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress|textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_email"
        android:layout_alignStart="@+id/et_email"
        android:layout_below="@+id/et_email"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/et_permanent_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_address"
        android:layout_alignStart="@+id/et_address"
        android:layout_below="@+id/et_address"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/permanent_address"
        android:inputType="textPersonName"
        android:text="" />

    <Button
        android:id="@+id/bt_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="79dp"
        android:text="@string/save_text" />

    <ImageView
        android:id="@+id/iv_profile_picture"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/et_fast_name"
        android:layout_marginLeft="5dp"
        android:onClick="captureImage"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/todo" />


</RelativeLayout>
